--- a/scenes/Makefile
+++ b/scenes/Makefile
@@ -7,7 +7,8 @@ all: ./images/aerial_explosion_filmic.png \
 	 ./images/ground_explosion_alt_filmic.png \
 	 ./images/matchbulb_filmic.png \
 	 ./images/anemone_tonemap.png \
-	 ./images/rainbow_box_tonemap.png
+	 ./images/rainbow_box_tonemap.png \
+	 ./images/smoke_streams_tonemap.png
 
 ./aerial_explosion/aerial_explosion_aces.exr : ./aerial_explosion/aerial_explosion.pbrt
 	pbrt $(SPP) $(GPU) --outfile $@ $<
@@ -50,6 +51,12 @@ all: ./images/aerial_explosion_filmic.png \
 
 ./images/rainbow_box_tonemap.png : ./rainbow_box/rainbow_box.exr
 	imgtool convert --outfile $@ --maxluminance 3 --tonemap $<
+
+./smoke_streams/smoke_streams.exr : ./smoke_streams/smoke_streams.pbrt
+	pbrt $(SPP) $(GPU) --outfile $@ $<
+
+./images/smoke_streams_tonemap.png : ./smoke_streams/smoke_streams.exr
+	imgtool convert --outfile $@ --tonemap $<
 
 .PHONY: clean
 clean:
